# NeuroLite

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  create_structure.ps1  generate_text.py  lancer_commandes.ps1  neurolite_demo.py  project_summary.md  ptq_script.py  pyproject.toml  requirements-dev.txt  requirements.txt  rules.json  setup.py  visited_urls.json
examples/: advanced_reasoning_with_memory.py  bayesian_network_example.py  benchmark_comparison.py  classification_example.py  data_loader.py  lifelong_learning_demo.py  memory_and_routing_example.py  multimodal_input_example.py  neurolite_demo.py  pretrain_neurolite.py  simple_example.py  symbolic_reasoning_example.py
neurolite/: NEUROLITE_ROADMAP_TACHES.md  RESUME_AMELIORATIONS.md  __init__.py  config.py  continual.py  hierarchical_memory.py  memory.py  mixer.py  model.py  multimodal.py  reasoning.py  routing.py  run_neurolite.py  symbolic.py  train_neurolite.py
scripts/: debug_cuda.py  download_dataset.py  evaluate.py  evaluate_model.py  explore_dataset.py  generate.py  generate_text.py  inspect_model.py  multimodal_test.py  neurolite_demo.py  save_model_variants.py  simple_save.py  test_advanced_modules.py  test_forward_pass.py  test_tokenizer.py  tokenizer.py  train.py  train_curriculum.py  train_sft.py  train_tokenizer.py  visualize_architecture_academic.py
tests/: test_core_model.py  test_hierarchical_memory.py  test_memory.py  test_mixer.py  test_model.py  test_multimodal.py  test_neural_symbolic_layer.py  test_symbolic_bayesian.py  test_symbolic_rule_engine.py
(+18904 files in other folders)
